--- a/Natas/natas.ipynb
+++ b/Natas/natas.ipynb
@@ -1763,61 +1763,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.01//EN\">\n",
-      "<head>\n",
-      "<!-- This stuff in the header has nothing to do with the level -->\n",
-      "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://natas.labs.overthewire.org/css/level.css\">\n",
-      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/jquery-ui.css\" />\n",
-      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/wechall.css\" />\n",
-      "<script src=\"http://natas.labs.overthewire.org/js/jquery-1.9.1.js\"></script>\n",
-      "<script src=\"http://natas.labs.overthewire.org/js/jquery-ui.js\"></script>\n",
-      "<script src=http://natas.labs.overthewire.org/js/wechall-data.js></script><script src=\"http://natas.labs.overthewire.org/js/wechall.js\"></script>\n",
-      "<script>var wechallinfo = { \"level\": \"natas29\", \"pass\": \"31F4j3Qi2PnuhIZQokxXk1L3QT9Cppns\" };</script></head>\n",
-      "<body oncontextmenu=\"javascript:alert('right clicking has been blocked!');return false;\">\n",
-      "\n",
-      "<style>\n",
-      "\n",
-      "#content {\n",
-      "    width: 1000px;\n",
-      "}\n",
-      "pre{\n",
-      "    background-color: #000000; \n",
-      "    color: #00FF00; \n",
-      "} \n",
-      "\n",
-      "</style>\n",
-      "\n",
-      "<h1>natas29</h1>\n",
-      "<div id=\"content\">\n",
-      "H3y K1dZ,<br>\n",
-      "y0 rEm3mB3rz p3Rl rit3?<br>\n",
-      "\\/\\/4Nn4 g0 olD5kewL? R3aD Up!<br><br>\n",
-      "\n",
-      "<form action=\"index.pl\" method=\"GET\">\n",
-      "<select name=\"file\" onchange=\"this.form.submit()\">\n",
-      "  <option value=\"\">s3lEcT suMp1n!</option>\n",
-      "  <option value=\"perl underground\">perl underground</option>\n",
-      "  <option value=\"perl underground 2\">perl underground 2</option>\n",
-      "  <option value=\"perl underground 3\">perl underground 3</option>\n",
-      "  <option value=\"perl underground 4\">perl underground 4</option>\n",
-      "  <option value=\"perl underground 5\">perl underground 5</option>\n",
-      "</select>\n",
-      "</form>\n",
-      "\n",
-      "<pre></pre><div id=\"viewsource\">c4n Y0 h4z s4uc3?</div>\n",
-      "</div>\n",
-      "</body>\n",
-      "</html>\n",
-      "WQhx1BvcmP9irs2MP9tRnLsNaDI76YrH\n",
-      "\n"
+      "password found: WQhx1BvcmP9irs2MP9tRnLsNaDI76YrH\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1829,7 +1793,6 @@
     "url = \"http://natas29.natas.labs.overthewire.org/index.pl\"\n",
     "res = requests.get(url, auth=auth, params=param)\n",
     "\n",
-    "print(res.text)\n",
     "find_pwd(res)"
    ]
   }
