--- a/Natas/natas.ipynb
+++ b/Natas/natas.ipynb
@@ -1748,21 +1748,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\x64\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -1794,6 +1779,25 @@
     "res = requests.get(url, auth=auth, params=param)\n",
     "\n",
     "find_pwd(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## natas30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# natas30\n",
+    "count = 30\n",
+    "init()\n",
+    "\n"
    ]
   }
  ],
