--- a/Natas/natas.ipynb
+++ b/Natas/natas.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,8 @@
     "\n",
     "def find_pwd(res):\n",
     "    global count\n",
-    "    pattern = r\"[\\w\\d]{32}\"\n",
+    "    # Negative look ahead assertion\n",
+    "    pattern = r\"(?!n?a?t?a?s?\\d{1,2}?)[\\w\\d]{32}\"\n",
     "    mat = re.findall(pattern, res.text)\n",
     "    natas = f\"natas{count}\"\n",
     "    if mat:\n",
@@ -85,7 +86,7 @@
     "                save_pwd(f\"natas{count + 1}\", m)\n",
     "                return True\n",
     "\n",
-    "    print(f\"password not found.\")\n",
+    "    print(\"password not found.\")\n",
     "    print(res.text)\n",
     "    return False\n",
     "\n",
@@ -1790,13 +1791,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "password not found.\n",
       "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.01//EN\">\n",
       "<head>\n",
       "<!-- This stuff in the header has nothing to do with the level -->\n",
@@ -1823,17 +1825,16 @@
       "</div>\n",
       "</body>\n",
       "</html>\n",
-      "\n",
-      "password found: natas31m7bfjAHpJmSYgQWWeqRE2qVBu\n"
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1850,7 +1851,7 @@
     "url = \"http://natas30.natas.labs.overthewire.org/index.pl\"\n",
     "res = requests.post(url, auth=auth, data=data)\n",
     "\n",
-    "print(res.text)\n",
+    "# print(res.text)\n",
     "find_pwd(res)"
    ]
   }
